--- a/package.json
+++ b/package.json
@@ -22,9 +22,13 @@
         "react-dom": "^16.5.2"
     },
     "devDependencies": {
+        "@babel/core": "^7.1.2",
+        "@babel/preset-env": "^7.1.0",
+        "babel-loader": "^8.0.4",
         "babel-preset-es2015": "^6.24.1",
         "babel-preset-es2015-loose": "^8.0.0",
         "babel-preset-react": "^6.24.1",
+        "webpack": "^4.22.0",
         "webpack-cli": "^3.1.2"
     }
 }
