--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "build": "webpack --config build/webpack.config.js"
+        "clear": "rimraf dist",
+        "build": "yarn run clear && webpack --config build/webpack.config.js",
+        "build:server": "yarn run clear && webpack --config server/webpack.config.server.js",
+        "start": "yarn run build:server && node server/server.js"
     },
     "repository": {
         "type": "git",
@@ -18,16 +21,18 @@
     },
     "homepage": "https://gitlab.com/dream-Y/Webpack-React-Page-Example#readme",
     "dependencies": {
+        "express": "^4.16.4",
         "react": "^16.5.2",
         "react-dom": "^16.5.2"
     },
     "devDependencies": {
-        "@babel/core": "^7.1.2",
-        "@babel/preset-env": "^7.1.0",
-        "babel-loader": "^8.0.4",
+        "babel-core": "^6.26.3",
+        "babel-loader": "7",
         "babel-preset-es2015": "^6.24.1",
         "babel-preset-es2015-loose": "^8.0.0",
         "babel-preset-react": "^6.24.1",
+        "html-webpack-plugin": "^3.2.0",
+        "rimraf": "^2.6.2",
         "webpack": "^4.22.0",
         "webpack-cli": "^3.1.2"
     }
